# movie_reviews

./: .gitignore  pyproject.toml
project/: __init__.py  db.py  schemas.py
project/router/: movie.py  reviews.py  users.py
project/tools/: tokens.py
